# matf-r-i----rag-llama3-lanchain-chroma

./: README.md  pyproject.toml
notebooks/: Open_source_RAG_using_LangChain,_LLAMA_3_and_Chroma_(P).ipynb
src/: open_source_rag_using_langchain,_llama_3_and_chroma_(p).py
