[tool.poetry]
name = "rng-statistic-tests"
version = "0.1.0"
description = ""
authors = ["Vladimir Filipovic"]
readme = "README.md"
packages = [{include = "rng_statistic_tests"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
seaborn = "^0.11.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
