[tool.poetry]
name = "rag-llama3-langchain-chrome"
version = "0.1.0"
description = ""
authors = ["Vladimir Filipovic"]
readme = "README.md"
packages = [{include = "rng_statistic_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.0"
langchain = "^0.2.12"
langchain-chroma = "^0.1.2"
langchainhub = "^0.1.20"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
